deploy: 07cdc3deb63999560e4251eb494388da8bc85ef9

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <li><a href="https://onlinelibrary.wiley.com/doi/10.1111/jvim.70165?af=R" target="_blank" rel="noopener noreferrer">Major Complications Associated With Cerebrospinal Fluid Collection in 11 Dogs: Clinical Presentation and Imaging Characteristics</a></li>
 <li><a href="https://onlinelibrary.wiley.com/doi/10.1111/jvim.70164?af=R" target="_blank" rel="noopener noreferrer">Prevalence and Whole Genome Sequence Analysis of Mycoplasma bovis Isolates From Bulk Tank Milk of Dairy Farms in Tennessee, USA</a></li>
 </ul>
-<h2>Veterinary and Comparative Oncology</h2>
+<h2>Journals of Small Animal Practice</h2>
 <ul>
 <li><a href="https://onlinelibrary.wiley.com/doi/10.1111/jsap.13897?af=R" target="_blank" rel="noopener noreferrer">Clinicopathological features of feline emphysematous cholecystitis: five cases (2017‐2022)</a></li>
 <li><a href="https://onlinelibrary.wiley.com/doi/10.1111/jsap.13898?af=R" target="_blank" rel="noopener noreferrer">Computed tomographic features of pituitary apoplexy in a cat</a></li>
@@ -42,7 +42,9 @@
 </ul>
 <h2>Journal of Feline Medicine and Surgery (JFMS)</h2>
 <ul>
-<li>記事を取得できませんでした。</li>
+<li><a href="https://journals.sagepub.com/doi/abs/10.1177/1098612X251314336?af=R" target="_blank" rel="noopener noreferrer">Immunohistochemical evaluation of cyclooxygenase-2 expression in feline nasal malignant epithelial tumours</a></li>
+<li><a href="https://journals.sagepub.com/doi/abs/10.1177/1098612X251335202?af=R" target="_blank" rel="noopener noreferrer">Retrospective study of biochemical profile changes in 93 cats with different hepatobiliary diseases</a></li>
+<li><a href="https://journals.sagepub.com/doi/abs/10.1177/1098612X251349914?af=R" target="_blank" rel="noopener noreferrer">Editorial Board</a></li>
 </ul>
 <h2>American Journal of Veterinary Research (AJVR)</h2>
 <ul>
@@ -50,9 +52,13 @@
 </ul>
 <h2>Journal of Veterinary Medical Science (JVMS)</h2>
 <ul>
-<li>記事を取得できませんでした。</li>
+<li><a href="http://www.jstage.jst.go.jp/browse/jvms/" target="_blank" rel="noopener noreferrer">The new article is now available. Journal of Veterinary Medical Science</a></li>
+<li><a href="http://www.jstage.jst.go.jp/browse/jvms/" target="_blank" rel="noopener noreferrer">The new article is now available. Journal of Veterinary Medical Science</a></li>
+<li><a href="http://www.jstage.jst.go.jp/browse/jvms/" target="_blank" rel="noopener noreferrer">The new article is now available. Journal of Veterinary Medical Science</a></li>
+<li><a href="http://www.jstage.jst.go.jp/browse/jvms/" target="_blank" rel="noopener noreferrer">The new article is now available. Journal of Veterinary Medical Science</a></li>
+<li><a href="http://www.jstage.jst.go.jp/browse/jvms/" target="_blank" rel="noopener noreferrer">The new article is now available. Journal of Veterinary Medical Science</a></li>
 </ul>
-<p class="update-time">最終更新: 2025-06-23 23:51:57 JST</p>
+<p class="update-time">最終更新: 2025-06-24 00:30:37 JST</p>
         </div>
     </body>
     </html>
