deploy: c69c135c766de5b9f0aa6c186d3e9e98e7969bb4

--- a/index.html
+++ b/index.html
@@ -22,7 +22,11 @@
             <h1>最新獣医学論文リスト</h1>
     <h2>Veterinary Quarterly</h2>
 <ul>
-<li>記事を取得できませんでした。</li>
+<li><a href="https://www.tandfonline.com/doi/full/10.1080/01652176.2024.2435978?af=R" target="_blank" rel="noopener noreferrer">Multiplexed immunoassay for a serum autoantibody biomarker panel in diagnostic and prognostic prediction of canine mammary tumors</a></li>
+<li><a href="https://www.tandfonline.com/doi/full/10.1080/01652176.2024.2447592?af=R" target="_blank" rel="noopener noreferrer">Supplemental glucose oxidase as an antibiotic substitute alleviates diarrhea and improves intestinal health in weaned piglets</a></li>
+<li><a href="https://www.tandfonline.com/doi/full/10.1080/01652176.2024.2447600?af=R" target="_blank" rel="noopener noreferrer">Isatidis root polysaccharides ameliorates post-weaning diarrhea by promoting intestinal health and modulating the gut microbiota in piglets</a></li>
+<li><a href="https://www.tandfonline.com/doi/full/10.1080/01652176.2024.2449082?af=R" target="_blank" rel="noopener noreferrer">Development of a differentiating of infected from vaccinated animal (DIVA) ELISA to detect antibodies against Senecavirus A in pigs using two expression systems of non-structural proteins</a></li>
+<li><a href="https://www.tandfonline.com/doi/full/10.1080/01652176.2025.2454473?af=R" target="_blank" rel="noopener noreferrer">Developing a novel TaqMan qPCR assay for optimizing Salmonella Pullorum detection in chickens</a></li>
 </ul>
 <h2>Journal of Veterinary Internal Medicine (JVIM)</h2>
 <ul>
@@ -58,7 +62,7 @@
 <li><a href="http://www.jstage.jst.go.jp/browse/jvms/" target="_blank" rel="noopener noreferrer">The new article is now available. Journal of Veterinary Medical Science</a></li>
 <li><a href="http://www.jstage.jst.go.jp/browse/jvms/" target="_blank" rel="noopener noreferrer">The new article is now available. Journal of Veterinary Medical Science</a></li>
 </ul>
-<p class="update-time">最終更新: 2025-06-24 00:30:37 JST</p>
+<p class="update-time">最終更新: 2025-06-24 07:31:20 JST</p>
         </div>
     </body>
     </html>
