--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
 </ul>
 <h2>Journal of Veterinary Internal Medicine (JVIM)</h2>
 <ul>
+<li><a href="https://onlinelibrary.wiley.com/doi/10.1111/jvim.70172?af=R" target="_blank" rel="noopener noreferrer">Clinical Presentation and Diagnosis of Multisystemic Eosinophilic Epitheliotropic Disease in a Miniature Donkey: A Case Report</a></li>
 <li><a href="https://onlinelibrary.wiley.com/doi/10.1111/jvim.70153?af=R" target="_blank" rel="noopener noreferrer">Erratum for “Association of Diet with Treatment Response in Dogs With Chronic Enteropathy: A Retrospective Multicenter Study”</a></li>
 <li><a href="https://onlinelibrary.wiley.com/doi/10.1111/jvim.70155?af=R" target="_blank" rel="noopener noreferrer">Erratum for "Polypoid Cystitis: A Retrospective Case‐Series of 112 Dogs”</a></li>
 <li><a href="https://onlinelibrary.wiley.com/doi/10.1111/jvim.70151?af=R" target="_blank" rel="noopener noreferrer">Freestyle Libre‐Derived Metrics in Assessing Glycemic Control in Diabetic Dogs</a></li>
 <li><a href="https://onlinelibrary.wiley.com/doi/10.1111/jvim.70165?af=R" target="_blank" rel="noopener noreferrer">Major Complications Associated With Cerebrospinal Fluid Collection in 11 Dogs: Clinical Presentation and Imaging Characteristics</a></li>
-<li><a href="https://onlinelibrary.wiley.com/doi/10.1111/jvim.70164?af=R" target="_blank" rel="noopener noreferrer">Prevalence and Whole Genome Sequence Analysis of Mycoplasma bovis Isolates From Bulk Tank Milk of Dairy Farms in Tennessee, USA</a></li>
 </ul>
 <h2>Journals of Small Animal Practice</h2>
 <ul>
@@ -47,6 +47,7 @@
 <h2>Journal of Feline Medicine and Surgery (JFMS)</h2>
 <ul>
 <li><a href="https://journals.sagepub.com/doi/abs/10.1177/1098612X251314336?af=R" target="_blank" rel="noopener noreferrer">Immunohistochemical evaluation of cyclooxygenase-2 expression in feline nasal malignant epithelial tumours</a></li>
+<li><a href="https://journals.sagepub.com/doi/abs/10.1177/1098612X251341068?af=R" target="_blank" rel="noopener noreferrer">Body stalk anomalies and their relationship to amniotic band disruption complex in six cats</a></li>
 <li><a href="https://journals.sagepub.com/doi/abs/10.1177/1098612X251335202?af=R" target="_blank" rel="noopener noreferrer">Retrospective study of biochemical profile changes in 93 cats with different hepatobiliary diseases</a></li>
 <li><a href="https://journals.sagepub.com/doi/abs/10.1177/1098612X251349914?af=R" target="_blank" rel="noopener noreferrer">Editorial Board</a></li>
 </ul>
@@ -62,7 +63,7 @@
 <li><a href="http://www.jstage.jst.go.jp/browse/jvms/" target="_blank" rel="noopener noreferrer">The new article is now available. Journal of Veterinary Medical Science</a></li>
 <li><a href="http://www.jstage.jst.go.jp/browse/jvms/" target="_blank" rel="noopener noreferrer">The new article is now available. Journal of Veterinary Medical Science</a></li>
 </ul>
-<p class="update-time">最終更新: 2025-06-24 14:44:27 JST</p>
+<p class="update-time">最終更新: 2025-06-25 14:44:15 JST</p>
         </div>
     </body>
     </html>
