deploy: c69c135c766de5b9f0aa6c186d3e9e98e7969bb4

--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
 </ul>
 <h2>Journals of Small Animal Practice</h2>
 <ul>
+<li><a href="https://onlinelibrary.wiley.com/doi/10.1111/jsap.13901?af=R" target="_blank" rel="noopener noreferrer">Cosmetic reconstruction of extensive maxillary defects with cerclage wire alone or in combination with polypropylene mesh in 25 dogs (2017‐2023)</a></li>
+<li><a href="https://onlinelibrary.wiley.com/doi/10.1111/jsap.13899?af=R" target="_blank" rel="noopener noreferrer">Pulmonary toxoplasmosis in an immunosuppressed cat</a></li>
+<li><a href="https://onlinelibrary.wiley.com/doi/10.1111/jsap.13887?af=R" target="_blank" rel="noopener noreferrer">Preserved ambulation in a puppy with severe thoracolumbar myelodysplasia</a></li>
 <li><a href="https://onlinelibrary.wiley.com/doi/10.1111/jsap.13897?af=R" target="_blank" rel="noopener noreferrer">Clinicopathological features of feline emphysematous cholecystitis: five cases (2017‐2022)</a></li>
 <li><a href="https://onlinelibrary.wiley.com/doi/10.1111/jsap.13898?af=R" target="_blank" rel="noopener noreferrer">Computed tomographic features of pituitary apoplexy in a cat</a></li>
-<li><a href="https://onlinelibrary.wiley.com/doi/10.1111/jsap.13895?af=R" target="_blank" rel="noopener noreferrer">Hemilingual tetany (“hemilingual spasm”) in a dog</a></li>
-<li><a href="https://onlinelibrary.wiley.com/doi/10.1111/jsap.13881?af=R" target="_blank" rel="noopener noreferrer">Evaluating the impact of a standardised pre‐operative patient management protocol on major post‐operative complications in dogs undergoing BOAS surgery</a></li>
-<li><a href="https://onlinelibrary.wiley.com/doi/10.1111/jsap.13837?af=R" target="_blank" rel="noopener noreferrer">Transarterial embolisation in the treatment of persistent haematuria in two dogs with lower urinary tract carcinoma</a></li>
 </ul>
 <h2>Journal of Feline Medicine and Surgery (JFMS)</h2>
 <ul>
@@ -63,7 +63,7 @@
 <li><a href="http://www.jstage.jst.go.jp/browse/jvms/" target="_blank" rel="noopener noreferrer">The new article is now available. Journal of Veterinary Medical Science</a></li>
 <li><a href="http://www.jstage.jst.go.jp/browse/jvms/" target="_blank" rel="noopener noreferrer">The new article is now available. Journal of Veterinary Medical Science</a></li>
 </ul>
-<p class="update-time">最終更新: 2025-06-25 14:44:15 JST</p>
+<p class="update-time">最終更新: 2025-06-26 14:43:03 JST</p>
         </div>
     </body>
     </html>
