deploy: c69c135c766de5b9f0aa6c186d3e9e98e7969bb4

--- a/index.html
+++ b/index.html
@@ -30,19 +30,19 @@
 </ul>
 <h2>Journal of Veterinary Internal Medicine (JVIM)</h2>
 <ul>
+<li><a href="https://onlinelibrary.wiley.com/doi/10.1111/jvim.70169?af=R" target="_blank" rel="noopener noreferrer">Longitudinal Assessment of QT Apex in Tumor‐Bearing Dogs Receiving Doxorubicin Monotherapy</a></li>
+<li><a href="https://onlinelibrary.wiley.com/doi/10.1111/jvim.70184?af=R" target="_blank" rel="noopener noreferrer">Esophageal Candidiasis in Two Dogs With Megaesophagus: A Case Report</a></li>
+<li><a href="https://onlinelibrary.wiley.com/doi/10.1111/jvim.70167?af=R" target="_blank" rel="noopener noreferrer">Pharmacokinetics of Orally Administered Phenazopyridine in Goats With Obstructive Urolithiasis</a></li>
 <li><a href="https://onlinelibrary.wiley.com/doi/10.1111/jvim.70172?af=R" target="_blank" rel="noopener noreferrer">Clinical Presentation and Diagnosis of Multisystemic Eosinophilic Epitheliotropic Disease in a Miniature Donkey: A Case Report</a></li>
 <li><a href="https://onlinelibrary.wiley.com/doi/10.1111/jvim.70153?af=R" target="_blank" rel="noopener noreferrer">Erratum for “Association of Diet with Treatment Response in Dogs With Chronic Enteropathy: A Retrospective Multicenter Study”</a></li>
-<li><a href="https://onlinelibrary.wiley.com/doi/10.1111/jvim.70155?af=R" target="_blank" rel="noopener noreferrer">Erratum for "Polypoid Cystitis: A Retrospective Case‐Series of 112 Dogs”</a></li>
-<li><a href="https://onlinelibrary.wiley.com/doi/10.1111/jvim.70151?af=R" target="_blank" rel="noopener noreferrer">Freestyle Libre‐Derived Metrics in Assessing Glycemic Control in Diabetic Dogs</a></li>
-<li><a href="https://onlinelibrary.wiley.com/doi/10.1111/jvim.70165?af=R" target="_blank" rel="noopener noreferrer">Major Complications Associated With Cerebrospinal Fluid Collection in 11 Dogs: Clinical Presentation and Imaging Characteristics</a></li>
 </ul>
 <h2>Journals of Small Animal Practice</h2>
 <ul>
+<li><a href="https://onlinelibrary.wiley.com/doi/10.1111/jsap.13903?af=R" target="_blank" rel="noopener noreferrer">JSAP 2024 Reviewers</a></li>
 <li><a href="https://onlinelibrary.wiley.com/doi/10.1111/jsap.13901?af=R" target="_blank" rel="noopener noreferrer">Cosmetic reconstruction of extensive maxillary defects with cerclage wire alone or in combination with polypropylene mesh in 25 dogs (2017‐2023)</a></li>
 <li><a href="https://onlinelibrary.wiley.com/doi/10.1111/jsap.13899?af=R" target="_blank" rel="noopener noreferrer">Pulmonary toxoplasmosis in an immunosuppressed cat</a></li>
 <li><a href="https://onlinelibrary.wiley.com/doi/10.1111/jsap.13887?af=R" target="_blank" rel="noopener noreferrer">Preserved ambulation in a puppy with severe thoracolumbar myelodysplasia</a></li>
 <li><a href="https://onlinelibrary.wiley.com/doi/10.1111/jsap.13897?af=R" target="_blank" rel="noopener noreferrer">Clinicopathological features of feline emphysematous cholecystitis: five cases (2017‐2022)</a></li>
-<li><a href="https://onlinelibrary.wiley.com/doi/10.1111/jsap.13898?af=R" target="_blank" rel="noopener noreferrer">Computed tomographic features of pituitary apoplexy in a cat</a></li>
 </ul>
 <h2>Journal of Feline Medicine and Surgery (JFMS)</h2>
 <ul>
@@ -63,7 +63,7 @@
 <li><a href="http://www.jstage.jst.go.jp/browse/jvms/" target="_blank" rel="noopener noreferrer">The new article is now available. Journal of Veterinary Medical Science</a></li>
 <li><a href="http://www.jstage.jst.go.jp/browse/jvms/" target="_blank" rel="noopener noreferrer">The new article is now available. Journal of Veterinary Medical Science</a></li>
 </ul>
-<p class="update-time">最終更新: 2025-06-27 14:44:39 JST</p>
+<p class="update-time">最終更新: 2025-06-28 14:39:57 JST</p>
         </div>
     </body>
     </html>
