--- a/index.html
+++ b/index.html
@@ -30,24 +30,25 @@
 </ul>
 <h2>Journal of Veterinary Internal Medicine (JVIM)</h2>
 <ul>
+<li><a href="https://onlinelibrary.wiley.com/doi/10.1111/jvim.70163?af=R" target="_blank" rel="noopener noreferrer">Randomized Open‐Label Clinical Trial Comparing Prednisolone and Cyclosporine With a Nonrandomized Active Control for Treating Presumed Chronic Pancreatitis in Cats</a></li>
+<li><a href="https://onlinelibrary.wiley.com/doi/10.1111/jvim.70180?af=R" target="_blank" rel="noopener noreferrer">Case–Control Investigation of Association of Clinician‐Determined Variables With Progressive Myelomalacia After Acute Thoracolumbar Disc Extrusion in Dogs</a></li>
+<li><a href="https://onlinelibrary.wiley.com/doi/10.1111/jvim.70182?af=R" target="_blank" rel="noopener noreferrer">Utility of a Modified Penlight‐Cover Test for Neurolocalization of Lesions Based on Visual Suppression of Nystagmus in Dogs and Cats With Vestibular Disease</a></li>
 <li><a href="https://onlinelibrary.wiley.com/doi/10.1111/jvim.70169?af=R" target="_blank" rel="noopener noreferrer">Longitudinal Assessment of QT Apex in Tumor‐Bearing Dogs Receiving Doxorubicin Monotherapy</a></li>
 <li><a href="https://onlinelibrary.wiley.com/doi/10.1111/jvim.70184?af=R" target="_blank" rel="noopener noreferrer">Esophageal Candidiasis in Two Dogs With Megaesophagus: A Case Report</a></li>
-<li><a href="https://onlinelibrary.wiley.com/doi/10.1111/jvim.70167?af=R" target="_blank" rel="noopener noreferrer">Pharmacokinetics of Orally Administered Phenazopyridine in Goats With Obstructive Urolithiasis</a></li>
-<li><a href="https://onlinelibrary.wiley.com/doi/10.1111/jvim.70172?af=R" target="_blank" rel="noopener noreferrer">Clinical Presentation and Diagnosis of Multisystemic Eosinophilic Epitheliotropic Disease in a Miniature Donkey: A Case Report</a></li>
-<li><a href="https://onlinelibrary.wiley.com/doi/10.1111/jvim.70153?af=R" target="_blank" rel="noopener noreferrer">Erratum for “Association of Diet with Treatment Response in Dogs With Chronic Enteropathy: A Retrospective Multicenter Study”</a></li>
 </ul>
 <h2>Journals of Small Animal Practice</h2>
 <ul>
-<li><a href="https://onlinelibrary.wiley.com/doi/10.1111/jsap.13903?af=R" target="_blank" rel="noopener noreferrer">JSAP 2024 Reviewers</a></li>
-<li><a href="https://onlinelibrary.wiley.com/doi/10.1111/jsap.13901?af=R" target="_blank" rel="noopener noreferrer">Cosmetic reconstruction of extensive maxillary defects with cerclage wire alone or in combination with polypropylene mesh in 25 dogs (2017‐2023)</a></li>
-<li><a href="https://onlinelibrary.wiley.com/doi/10.1111/jsap.13899?af=R" target="_blank" rel="noopener noreferrer">Pulmonary toxoplasmosis in an immunosuppressed cat</a></li>
-<li><a href="https://onlinelibrary.wiley.com/doi/10.1111/jsap.13887?af=R" target="_blank" rel="noopener noreferrer">Preserved ambulation in a puppy with severe thoracolumbar myelodysplasia</a></li>
-<li><a href="https://onlinelibrary.wiley.com/doi/10.1111/jsap.13897?af=R" target="_blank" rel="noopener noreferrer">Clinicopathological features of feline emphysematous cholecystitis: five cases (2017‐2022)</a></li>
+<li><a href="https://onlinelibrary.wiley.com/doi/10.1111/jsap.13906?af=R" target="_blank" rel="noopener noreferrer">Treatment with subcutaneous GS‐441524 in ferrets affected by ferret systemic coronavirus‐associated disease: seven cases (2021‐2024)</a></li>
+<li><a href="https://onlinelibrary.wiley.com/doi/10.1111/jsap.13893?af=R" target="_blank" rel="noopener noreferrer">The long‐term outcome and changes in tricuspid regurgitation pressure gradient in dogs diagnosed with pulmonary hypertension and Angiostrongylus vasorum infestation</a></li>
+<li><a href="https://onlinelibrary.wiley.com/doi/10.1111/jsap.13892?af=R" target="_blank" rel="noopener noreferrer">Weekly biological variation of serum biochemistry analytes and fibroblast growth factor 23 in healthy cats and cats with chronic kidney disease</a></li>
+<li><a href="https://onlinelibrary.wiley.com/doi/10.1111/jsap.13908?af=R" target="_blank" rel="noopener noreferrer">Outcome of marsupialisation for the management of isolated sublingual sialocoeles in dogs: nine cases (2009‐2023)</a></li>
+<li><a href="https://onlinelibrary.wiley.com/doi/10.1111/jsap.13907?af=R" target="_blank" rel="noopener noreferrer">Retrospective evaluation of the outcomes of advanced airway management in intubated patients with brachycephalic obstructive airway syndrome: 52 cases (2010‐2020)</a></li>
 </ul>
 <h2>Journal of Feline Medicine and Surgery (JFMS)</h2>
 <ul>
 <li><a href="https://journals.sagepub.com/doi/abs/10.1177/1098612X251314336?af=R" target="_blank" rel="noopener noreferrer">Immunohistochemical evaluation of cyclooxygenase-2 expression in feline nasal malignant epithelial tumours</a></li>
 <li><a href="https://journals.sagepub.com/doi/abs/10.1177/1098612X251341068?af=R" target="_blank" rel="noopener noreferrer">Body stalk anomalies and their relationship to amniotic band disruption complex in six cats</a></li>
+<li><a href="https://journals.sagepub.com/doi/abs/10.1177/1098612X251338641?af=R" target="_blank" rel="noopener noreferrer">A retrospective descriptive study of colorectal large or intermediate cell lymphoma in cats managed with surgical resection and/or medical management</a></li>
 <li><a href="https://journals.sagepub.com/doi/abs/10.1177/1098612X251335202?af=R" target="_blank" rel="noopener noreferrer">Retrospective study of biochemical profile changes in 93 cats with different hepatobiliary diseases</a></li>
 <li><a href="https://journals.sagepub.com/doi/abs/10.1177/1098612X251349914?af=R" target="_blank" rel="noopener noreferrer">Editorial Board</a></li>
 </ul>
@@ -63,7 +64,7 @@
 <li><a href="http://www.jstage.jst.go.jp/browse/jvms/" target="_blank" rel="noopener noreferrer">The new article is now available. Journal of Veterinary Medical Science</a></li>
 <li><a href="http://www.jstage.jst.go.jp/browse/jvms/" target="_blank" rel="noopener noreferrer">The new article is now available. Journal of Veterinary Medical Science</a></li>
 </ul>
-<p class="update-time">最終更新: 2025-06-28 14:39:57 JST</p>
+<p class="update-time">最終更新: 2025-06-29 14:45:46 JST</p>
         </div>
     </body>
     </html>
