deploy: c69c135c766de5b9f0aa6c186d3e9e98e7969bb4

--- a/index.html
+++ b/index.html
@@ -30,19 +30,19 @@
 </ul>
 <h2>Journal of Veterinary Internal Medicine (JVIM)</h2>
 <ul>
+<li><a href="https://onlinelibrary.wiley.com/doi/10.1111/jvim.70145?af=R" target="_blank" rel="noopener noreferrer">Evaluation of Subjective Assessment of Right Heart Size and Function Using Standard 2D‐Echocardiographic Recordings in Horses With and Without Pulmonary Hypertension</a></li>
 <li><a href="https://onlinelibrary.wiley.com/doi/10.1111/jvim.70163?af=R" target="_blank" rel="noopener noreferrer">Randomized Open‐Label Clinical Trial Comparing Prednisolone and Cyclosporine With a Nonrandomized Active Control for Treating Presumed Chronic Pancreatitis in Cats</a></li>
 <li><a href="https://onlinelibrary.wiley.com/doi/10.1111/jvim.70180?af=R" target="_blank" rel="noopener noreferrer">Case–Control Investigation of Association of Clinician‐Determined Variables With Progressive Myelomalacia After Acute Thoracolumbar Disc Extrusion in Dogs</a></li>
 <li><a href="https://onlinelibrary.wiley.com/doi/10.1111/jvim.70182?af=R" target="_blank" rel="noopener noreferrer">Utility of a Modified Penlight‐Cover Test for Neurolocalization of Lesions Based on Visual Suppression of Nystagmus in Dogs and Cats With Vestibular Disease</a></li>
 <li><a href="https://onlinelibrary.wiley.com/doi/10.1111/jvim.70169?af=R" target="_blank" rel="noopener noreferrer">Longitudinal Assessment of QT Apex in Tumor‐Bearing Dogs Receiving Doxorubicin Monotherapy</a></li>
-<li><a href="https://onlinelibrary.wiley.com/doi/10.1111/jvim.70184?af=R" target="_blank" rel="noopener noreferrer">Esophageal Candidiasis in Two Dogs With Megaesophagus: A Case Report</a></li>
 </ul>
 <h2>Journals of Small Animal Practice</h2>
 <ul>
+<li><a href="https://onlinelibrary.wiley.com/doi/10.1111/jsap.13910?af=R" target="_blank" rel="noopener noreferrer">Understanding the rationale for metronidazole use in dogs and cats</a></li>
+<li><a href="https://onlinelibrary.wiley.com/doi/10.1111/jsap.13902?af=R" target="_blank" rel="noopener noreferrer">Evaluation of the nutritional adequacy of commercially available diets for pet and farm rabbits compared to pet rabbit nutritional recommendation</a></li>
+<li><a href="https://onlinelibrary.wiley.com/doi/10.1111/jsap.13896?af=R" target="_blank" rel="noopener noreferrer">Respiratory rate and breathing pattern in dogs and cats in intensive care units and the value of camera surveillance</a></li>
 <li><a href="https://onlinelibrary.wiley.com/doi/10.1111/jsap.13906?af=R" target="_blank" rel="noopener noreferrer">Treatment with subcutaneous GS‐441524 in ferrets affected by ferret systemic coronavirus‐associated disease: seven cases (2021‐2024)</a></li>
 <li><a href="https://onlinelibrary.wiley.com/doi/10.1111/jsap.13893?af=R" target="_blank" rel="noopener noreferrer">The long‐term outcome and changes in tricuspid regurgitation pressure gradient in dogs diagnosed with pulmonary hypertension and Angiostrongylus vasorum infestation</a></li>
-<li><a href="https://onlinelibrary.wiley.com/doi/10.1111/jsap.13892?af=R" target="_blank" rel="noopener noreferrer">Weekly biological variation of serum biochemistry analytes and fibroblast growth factor 23 in healthy cats and cats with chronic kidney disease</a></li>
-<li><a href="https://onlinelibrary.wiley.com/doi/10.1111/jsap.13908?af=R" target="_blank" rel="noopener noreferrer">Outcome of marsupialisation for the management of isolated sublingual sialocoeles in dogs: nine cases (2009‐2023)</a></li>
-<li><a href="https://onlinelibrary.wiley.com/doi/10.1111/jsap.13907?af=R" target="_blank" rel="noopener noreferrer">Retrospective evaluation of the outcomes of advanced airway management in intubated patients with brachycephalic obstructive airway syndrome: 52 cases (2010‐2020)</a></li>
 </ul>
 <h2>Journal of Feline Medicine and Surgery (JFMS)</h2>
 <ul>
@@ -64,7 +64,7 @@
 <li><a href="http://www.jstage.jst.go.jp/browse/jvms/" target="_blank" rel="noopener noreferrer">The new article is now available. Journal of Veterinary Medical Science</a></li>
 <li><a href="http://www.jstage.jst.go.jp/browse/jvms/" target="_blank" rel="noopener noreferrer">The new article is now available. Journal of Veterinary Medical Science</a></li>
 </ul>
-<p class="update-time">最終更新: 2025-07-01 14:46:42 JST</p>
+<p class="update-time">最終更新: 2025-07-02 14:46:21 JST</p>
         </div>
     </body>
     </html>
