deploy: c69c135c766de5b9f0aa6c186d3e9e98e7969bb4

--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
             <h1>最新獣医学論文リスト</h1>
     <h2>Veterinary Quarterly</h2>
 <ul>
-<li><a href="https://www.tandfonline.com/doi/full/10.1080/01652176.2024.2435978?af=R" target="_blank" rel="noopener noreferrer">Multiplexed immunoassay for a serum autoantibody biomarker panel in diagnostic and prognostic prediction of canine mammary tumors</a></li>
 <li><a href="https://www.tandfonline.com/doi/full/10.1080/01652176.2024.2447592?af=R" target="_blank" rel="noopener noreferrer">Supplemental glucose oxidase as an antibiotic substitute alleviates diarrhea and improves intestinal health in weaned piglets</a></li>
-<li><a href="https://www.tandfonline.com/doi/full/10.1080/01652176.2024.2447600?af=R" target="_blank" rel="noopener noreferrer">Isatidis root polysaccharides ameliorates post-weaning diarrhea by promoting intestinal health and modulating the gut microbiota in piglets</a></li>
-<li><a href="https://www.tandfonline.com/doi/full/10.1080/01652176.2024.2449082?af=R" target="_blank" rel="noopener noreferrer">Development of a differentiating of infected from vaccinated animal (DIVA) ELISA to detect antibodies against Senecavirus A in pigs using two expression systems of non-structural proteins</a></li>
-<li><a href="https://www.tandfonline.com/doi/full/10.1080/01652176.2025.2454473?af=R" target="_blank" rel="noopener noreferrer">Developing a novel TaqMan qPCR assay for optimizing Salmonella Pullorum detection in chickens</a></li>
+<li><a href="https://www.tandfonline.com/doi/full/10.1080/01652176.2025.2486771?af=R" target="_blank" rel="noopener noreferrer">Raman spectral band imaging for the diagnostics and classification of canine and feline cutaneous tumors</a></li>
+<li><a href="https://www.tandfonline.com/doi/full/10.1080/01652176.2025.2488025?af=R" target="_blank" rel="noopener noreferrer">PCR testing of conjunctival swabs to detect feline leukaemia virus in domestic cats in Thailand</a></li>
+<li><a href="https://www.tandfonline.com/doi/full/10.1080/01652176.2025.2498915?af=R" target="_blank" rel="noopener noreferrer">Effects of oral black Maca (Lepidium meyenii) supplementation on semen quality and refrigerated storage stability in subfertile and normofertile dogs: a study on sperm parameters and testosterone levels</a></li>
+<li><a href="https://www.tandfonline.com/doi/full/10.1080/01652176.2025.2513965?af=R" target="_blank" rel="noopener noreferrer">Perioperative drug management in non-critical companion animals: a retrospective study at a Spanish veterinary teaching hospital (2018–2022)</a></li>
 </ul>
 <h2>Journal of Veterinary Internal Medicine (JVIM)</h2>
 <ul>
@@ -38,11 +38,11 @@
 </ul>
 <h2>Journals of Small Animal Practice</h2>
 <ul>
+<li><a href="https://onlinelibrary.wiley.com/doi/10.1111/jsap.13911?af=R" target="_blank" rel="noopener noreferrer">Autoantibodies against TRIM46 identified in a dog suffering from suspected meningoencephalomyelitis of unknown origin</a></li>
 <li><a href="https://onlinelibrary.wiley.com/doi/10.1111/jsap.13910?af=R" target="_blank" rel="noopener noreferrer">Understanding the rationale for metronidazole use in dogs and cats</a></li>
 <li><a href="https://onlinelibrary.wiley.com/doi/10.1111/jsap.13902?af=R" target="_blank" rel="noopener noreferrer">Evaluation of the nutritional adequacy of commercially available diets for pet and farm rabbits compared to pet rabbit nutritional recommendation</a></li>
 <li><a href="https://onlinelibrary.wiley.com/doi/10.1111/jsap.13896?af=R" target="_blank" rel="noopener noreferrer">Respiratory rate and breathing pattern in dogs and cats in intensive care units and the value of camera surveillance</a></li>
 <li><a href="https://onlinelibrary.wiley.com/doi/10.1111/jsap.13906?af=R" target="_blank" rel="noopener noreferrer">Treatment with subcutaneous GS‐441524 in ferrets affected by ferret systemic coronavirus‐associated disease: seven cases (2021‐2024)</a></li>
-<li><a href="https://onlinelibrary.wiley.com/doi/10.1111/jsap.13893?af=R" target="_blank" rel="noopener noreferrer">The long‐term outcome and changes in tricuspid regurgitation pressure gradient in dogs diagnosed with pulmonary hypertension and Angiostrongylus vasorum infestation</a></li>
 </ul>
 <h2>Journal of Feline Medicine and Surgery (JFMS)</h2>
 <ul>
@@ -64,7 +64,7 @@
 <li><a href="http://www.jstage.jst.go.jp/browse/jvms/" target="_blank" rel="noopener noreferrer">The new article is now available. Journal of Veterinary Medical Science</a></li>
 <li><a href="http://www.jstage.jst.go.jp/browse/jvms/" target="_blank" rel="noopener noreferrer">The new article is now available. Journal of Veterinary Medical Science</a></li>
 </ul>
-<p class="update-time">最終更新: 2025-07-02 14:46:21 JST</p>
+<p class="update-time">最終更新: 2025-07-03 14:48:18 JST</p>
         </div>
     </body>
     </html>
