--- a/index.html
+++ b/index.html
@@ -30,27 +30,25 @@
 </ul>
 <h2>Journal of Veterinary Internal Medicine (JVIM)</h2>
 <ul>
+<li><a href="https://onlinelibrary.wiley.com/doi/10.1111/jvim.70181?af=R" target="_blank" rel="noopener noreferrer">Myocardial and Renal Renin–Angiotensin System Enzyme Activity in Dogs</a></li>
 <li><a href="https://onlinelibrary.wiley.com/doi/10.1111/jvim.70145?af=R" target="_blank" rel="noopener noreferrer">Evaluation of Subjective Assessment of Right Heart Size and Function Using Standard 2D‐Echocardiographic Recordings in Horses With and Without Pulmonary Hypertension</a></li>
 <li><a href="https://onlinelibrary.wiley.com/doi/10.1111/jvim.70163?af=R" target="_blank" rel="noopener noreferrer">Randomized Open‐Label Clinical Trial Comparing Prednisolone and Cyclosporine With a Nonrandomized Active Control for Treating Presumed Chronic Pancreatitis in Cats</a></li>
 <li><a href="https://onlinelibrary.wiley.com/doi/10.1111/jvim.70180?af=R" target="_blank" rel="noopener noreferrer">Case–Control Investigation of Association of Clinician‐Determined Variables With Progressive Myelomalacia After Acute Thoracolumbar Disc Extrusion in Dogs</a></li>
 <li><a href="https://onlinelibrary.wiley.com/doi/10.1111/jvim.70182?af=R" target="_blank" rel="noopener noreferrer">Utility of a Modified Penlight‐Cover Test for Neurolocalization of Lesions Based on Visual Suppression of Nystagmus in Dogs and Cats With Vestibular Disease</a></li>
-<li><a href="https://onlinelibrary.wiley.com/doi/10.1111/jvim.70169?af=R" target="_blank" rel="noopener noreferrer">Longitudinal Assessment of QT Apex in Tumor‐Bearing Dogs Receiving Doxorubicin Monotherapy</a></li>
 </ul>
 <h2>Journals of Small Animal Practice</h2>
 <ul>
+<li><a href="https://onlinelibrary.wiley.com/doi/10.1111/jsap.13900?af=R" target="_blank" rel="noopener noreferrer">Splenogonadal fusion in a cryptorchid dog</a></li>
 <li><a href="https://onlinelibrary.wiley.com/doi/10.1111/jsap.13911?af=R" target="_blank" rel="noopener noreferrer">Autoantibodies against TRIM46 identified in a dog suffering from suspected meningoencephalomyelitis of unknown origin</a></li>
 <li><a href="https://onlinelibrary.wiley.com/doi/10.1111/jsap.13910?af=R" target="_blank" rel="noopener noreferrer">Understanding the rationale for metronidazole use in dogs and cats</a></li>
 <li><a href="https://onlinelibrary.wiley.com/doi/10.1111/jsap.13902?af=R" target="_blank" rel="noopener noreferrer">Evaluation of the nutritional adequacy of commercially available diets for pet and farm rabbits compared to pet rabbit nutritional recommendation</a></li>
 <li><a href="https://onlinelibrary.wiley.com/doi/10.1111/jsap.13896?af=R" target="_blank" rel="noopener noreferrer">Respiratory rate and breathing pattern in dogs and cats in intensive care units and the value of camera surveillance</a></li>
-<li><a href="https://onlinelibrary.wiley.com/doi/10.1111/jsap.13906?af=R" target="_blank" rel="noopener noreferrer">Treatment with subcutaneous GS‐441524 in ferrets affected by ferret systemic coronavirus‐associated disease: seven cases (2021‐2024)</a></li>
 </ul>
 <h2>Journal of Feline Medicine and Surgery (JFMS)</h2>
 <ul>
-<li><a href="https://journals.sagepub.com/doi/abs/10.1177/1098612X251314336?af=R" target="_blank" rel="noopener noreferrer">Immunohistochemical evaluation of cyclooxygenase-2 expression in feline nasal malignant epithelial tumours</a></li>
-<li><a href="https://journals.sagepub.com/doi/abs/10.1177/1098612X251341068?af=R" target="_blank" rel="noopener noreferrer">Body stalk anomalies and their relationship to amniotic band disruption complex in six cats</a></li>
-<li><a href="https://journals.sagepub.com/doi/abs/10.1177/1098612X251338641?af=R" target="_blank" rel="noopener noreferrer">A retrospective descriptive study of colorectal large or intermediate cell lymphoma in cats managed with surgical resection and/or medical management</a></li>
-<li><a href="https://journals.sagepub.com/doi/abs/10.1177/1098612X251335202?af=R" target="_blank" rel="noopener noreferrer">Retrospective study of biochemical profile changes in 93 cats with different hepatobiliary diseases</a></li>
-<li><a href="https://journals.sagepub.com/doi/abs/10.1177/1098612X251349914?af=R" target="_blank" rel="noopener noreferrer">Editorial Board</a></li>
+<li><a href="https://journals.sagepub.com/doi/abs/10.1177/1098612X251336702?af=R" target="_blank" rel="noopener noreferrer">Percutaneous cholecystostomy drain placement in cats: feasibility and safety of an ultrasound- and fluoroscopy-guided method</a></li>
+<li><a href="https://journals.sagepub.com/doi/abs/10.1177/1098612X251334558?af=R" target="_blank" rel="noopener noreferrer">Physical rehabilitation of cats: 1. Common conditions benefiting from physiotherapy</a></li>
+<li><a href="https://journals.sagepub.com/doi/abs/10.1177/1098612X251334555?af=R" target="_blank" rel="noopener noreferrer">Physical rehabilitation of cats: 2. Treatment therapies and exercises</a></li>
 </ul>
 <h2>American Journal of Veterinary Research (AJVR)</h2>
 <ul>
@@ -64,7 +62,7 @@
 <li><a href="http://www.jstage.jst.go.jp/browse/jvms/" target="_blank" rel="noopener noreferrer">The new article is now available. Journal of Veterinary Medical Science</a></li>
 <li><a href="http://www.jstage.jst.go.jp/browse/jvms/" target="_blank" rel="noopener noreferrer">The new article is now available. Journal of Veterinary Medical Science</a></li>
 </ul>
-<p class="update-time">最終更新: 2025-07-03 14:48:18 JST</p>
+<p class="update-time">最終更新: 2025-07-04 14:46:16 JST</p>
         </div>
     </body>
     </html>
