--- a/index.html
+++ b/index.html
@@ -30,23 +30,24 @@
 </ul>
 <h2>Journal of Veterinary Internal Medicine (JVIM)</h2>
 <ul>
+<li><a href="https://onlinelibrary.wiley.com/doi/10.1111/jvim.70183?af=R" target="_blank" rel="noopener noreferrer">Continuous Renal Replacement Therapy: Application of Kidney Disease Improving Global Outcomes Guidelines for Treatment Prescription in Dogs With Acute Kidney Injury and Outcome Prediction</a></li>
+<li><a href="https://onlinelibrary.wiley.com/doi/10.1111/jvim.70178?af=R" target="_blank" rel="noopener noreferrer">Use of a Modified Transhepatic Rendezvous Technique for Stenting of Malignant Biliary Obstruction in 2 Cats</a></li>
 <li><a href="https://onlinelibrary.wiley.com/doi/10.1111/jvim.70181?af=R" target="_blank" rel="noopener noreferrer">Myocardial and Renal Renin–Angiotensin System Enzyme Activity in Dogs</a></li>
 <li><a href="https://onlinelibrary.wiley.com/doi/10.1111/jvim.70145?af=R" target="_blank" rel="noopener noreferrer">Evaluation of Subjective Assessment of Right Heart Size and Function Using Standard 2D‐Echocardiographic Recordings in Horses With and Without Pulmonary Hypertension</a></li>
 <li><a href="https://onlinelibrary.wiley.com/doi/10.1111/jvim.70163?af=R" target="_blank" rel="noopener noreferrer">Randomized Open‐Label Clinical Trial Comparing Prednisolone and Cyclosporine With a Nonrandomized Active Control for Treating Presumed Chronic Pancreatitis in Cats</a></li>
-<li><a href="https://onlinelibrary.wiley.com/doi/10.1111/jvim.70180?af=R" target="_blank" rel="noopener noreferrer">Case–Control Investigation of Association of Clinician‐Determined Variables With Progressive Myelomalacia After Acute Thoracolumbar Disc Extrusion in Dogs</a></li>
-<li><a href="https://onlinelibrary.wiley.com/doi/10.1111/jvim.70182?af=R" target="_blank" rel="noopener noreferrer">Utility of a Modified Penlight‐Cover Test for Neurolocalization of Lesions Based on Visual Suppression of Nystagmus in Dogs and Cats With Vestibular Disease</a></li>
 </ul>
 <h2>Journals of Small Animal Practice</h2>
 <ul>
-<li><a href="https://onlinelibrary.wiley.com/doi/10.1111/jsap.13900?af=R" target="_blank" rel="noopener noreferrer">Splenogonadal fusion in a cryptorchid dog</a></li>
-<li><a href="https://onlinelibrary.wiley.com/doi/10.1111/jsap.13911?af=R" target="_blank" rel="noopener noreferrer">Autoantibodies against TRIM46 identified in a dog suffering from suspected meningoencephalomyelitis of unknown origin</a></li>
-<li><a href="https://onlinelibrary.wiley.com/doi/10.1111/jsap.13910?af=R" target="_blank" rel="noopener noreferrer">Understanding the rationale for metronidazole use in dogs and cats</a></li>
-<li><a href="https://onlinelibrary.wiley.com/doi/10.1111/jsap.13902?af=R" target="_blank" rel="noopener noreferrer">Evaluation of the nutritional adequacy of commercially available diets for pet and farm rabbits compared to pet rabbit nutritional recommendation</a></li>
-<li><a href="https://onlinelibrary.wiley.com/doi/10.1111/jsap.13896?af=R" target="_blank" rel="noopener noreferrer">Respiratory rate and breathing pattern in dogs and cats in intensive care units and the value of camera surveillance</a></li>
+<li><a href="https://onlinelibrary.wiley.com/doi/10.1111/jsap.13848?af=R" target="_blank" rel="noopener noreferrer">Multiple pathological bone fractures in a dog with adrenal‐dependent Cushing's syndrome</a></li>
+<li><a href="https://onlinelibrary.wiley.com/doi/10.1111/jsap.13845?af=R" target="_blank" rel="noopener noreferrer">Right duplex kidney associated with ectopic ureter in an incontinent cat</a></li>
+<li><a href="https://onlinelibrary.wiley.com/doi/10.1111/jsap.13748?af=R" target="_blank" rel="noopener noreferrer">Issue Information</a></li>
+<li><a href="https://onlinelibrary.wiley.com/doi/10.1111/jsap.13846?af=R" target="_blank" rel="noopener noreferrer">Peripheral nerve blocks of the dorsal cranium in cats undergoing craniotomy: seven cases (2022‐2023)</a></li>
+<li><a href="https://onlinelibrary.wiley.com/doi/10.1111/jsap.13847?af=R" target="_blank" rel="noopener noreferrer">High concordance of blood glucose measurement in dogs between a beta prototype glucometer device and a reference laboratory standard in a clinical setting</a></li>
 </ul>
 <h2>Journal of Feline Medicine and Surgery (JFMS)</h2>
 <ul>
 <li><a href="https://journals.sagepub.com/doi/abs/10.1177/1098612X251336702?af=R" target="_blank" rel="noopener noreferrer">Percutaneous cholecystostomy drain placement in cats: feasibility and safety of an ultrasound- and fluoroscopy-guided method</a></li>
+<li><a href="https://journals.sagepub.com/doi/abs/10.1177/1098612X251314710?af=R" target="_blank" rel="noopener noreferrer">Exposure of urine of domestic cats to different substrates: impact on urine specific gravity</a></li>
 <li><a href="https://journals.sagepub.com/doi/abs/10.1177/1098612X251334558?af=R" target="_blank" rel="noopener noreferrer">Physical rehabilitation of cats: 1. Common conditions benefiting from physiotherapy</a></li>
 <li><a href="https://journals.sagepub.com/doi/abs/10.1177/1098612X251334555?af=R" target="_blank" rel="noopener noreferrer">Physical rehabilitation of cats: 2. Treatment therapies and exercises</a></li>
 </ul>
@@ -62,7 +63,7 @@
 <li><a href="http://www.jstage.jst.go.jp/browse/jvms/" target="_blank" rel="noopener noreferrer">The new article is now available. Journal of Veterinary Medical Science</a></li>
 <li><a href="http://www.jstage.jst.go.jp/browse/jvms/" target="_blank" rel="noopener noreferrer">The new article is now available. Journal of Veterinary Medical Science</a></li>
 </ul>
-<p class="update-time">最終更新: 2025-07-05 14:39:29 JST</p>
+<p class="update-time">最終更新: 2025-07-07 14:46:32 JST</p>
         </div>
     </body>
     </html>
