deploy: c69c135c766de5b9f0aa6c186d3e9e98e7969bb4

--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
 </ul>
 <h2>Journal of Veterinary Internal Medicine (JVIM)</h2>
 <ul>
-<li><a href="https://onlinelibrary.wiley.com/doi/10.1111/jvim.70183?af=R" target="_blank" rel="noopener noreferrer">Continuous Renal Replacement Therapy: Application of Kidney Disease Improving Global Outcomes Guidelines for Treatment Prescription in Dogs With Acute Kidney Injury and Outcome Prediction</a></li>
+<li><a href="https://onlinelibrary.wiley.com/doi/10.1111/jvim.70185?af=R" target="_blank" rel="noopener noreferrer">A CNTNAP1 Missense Variant Associated With Laryngeal Paralysis and Polyneuropathy in Young Great Dane Dogs</a></li>
 <li><a href="https://onlinelibrary.wiley.com/doi/10.1111/jvim.70178?af=R" target="_blank" rel="noopener noreferrer">Use of a Modified Transhepatic Rendezvous Technique for Stenting of Malignant Biliary Obstruction in 2 Cats</a></li>
+<li><a href="https://onlinelibrary.wiley.com/doi/10.1111/jvim.70183?af=R" target="_blank" rel="noopener noreferrer">Continuous Renal Replacement Therapy: Application of Kidney Disease Improving Global Outcomes Guidelines for Treatment Prescription in Dogs With Acute Kidney Injury and Outcome Prediction</a></li>
 <li><a href="https://onlinelibrary.wiley.com/doi/10.1111/jvim.70181?af=R" target="_blank" rel="noopener noreferrer">Myocardial and Renal Renin–Angiotensin System Enzyme Activity in Dogs</a></li>
 <li><a href="https://onlinelibrary.wiley.com/doi/10.1111/jvim.70145?af=R" target="_blank" rel="noopener noreferrer">Evaluation of Subjective Assessment of Right Heart Size and Function Using Standard 2D‐Echocardiographic Recordings in Horses With and Without Pulmonary Hypertension</a></li>
-<li><a href="https://onlinelibrary.wiley.com/doi/10.1111/jvim.70163?af=R" target="_blank" rel="noopener noreferrer">Randomized Open‐Label Clinical Trial Comparing Prednisolone and Cyclosporine With a Nonrandomized Active Control for Treating Presumed Chronic Pancreatitis in Cats</a></li>
 </ul>
 <h2>Journals of Small Animal Practice</h2>
 <ul>
@@ -63,7 +63,7 @@
 <li><a href="http://www.jstage.jst.go.jp/browse/jvms/" target="_blank" rel="noopener noreferrer">The new article is now available. Journal of Veterinary Medical Science</a></li>
 <li><a href="http://www.jstage.jst.go.jp/browse/jvms/" target="_blank" rel="noopener noreferrer">The new article is now available. Journal of Veterinary Medical Science</a></li>
 </ul>
-<p class="update-time">最終更新: 2025-07-07 14:46:32 JST</p>
+<p class="update-time">最終更新: 2025-07-08 14:44:41 JST</p>
         </div>
     </body>
     </html>
