deploy: c69c135c766de5b9f0aa6c186d3e9e98e7969bb4

--- a/index.html
+++ b/index.html
@@ -30,19 +30,19 @@
 </ul>
 <h2>Journal of Veterinary Internal Medicine (JVIM)</h2>
 <ul>
+<li><a href="https://onlinelibrary.wiley.com/doi/10.1111/jvim.70170?af=R" target="_blank" rel="noopener noreferrer">Metabolic Alterations Associated With Rapidly Progressive Chronic Kidney Disease in Cats</a></li>
+<li><a href="https://onlinelibrary.wiley.com/doi/10.1111/jvim.70166?af=R" target="_blank" rel="noopener noreferrer">Exploring the Importance of Repeated Health Screening in Healthy Older Dogs</a></li>
+<li><a href="https://onlinelibrary.wiley.com/doi/10.1111/jvim.70179?af=R" target="_blank" rel="noopener noreferrer">Safety, Efficacy and Doxorubicin Pharmacokinetics During Cannabidiol/Cannabidiolic Acid Rich Hemp Oil Use in Dogs With Lymphoma Undergoing CHOP Chemotherapy</a></li>
 <li><a href="https://onlinelibrary.wiley.com/doi/10.1111/jvim.70185?af=R" target="_blank" rel="noopener noreferrer">A CNTNAP1 Missense Variant Associated With Laryngeal Paralysis and Polyneuropathy in Young Great Dane Dogs</a></li>
 <li><a href="https://onlinelibrary.wiley.com/doi/10.1111/jvim.70178?af=R" target="_blank" rel="noopener noreferrer">Use of a Modified Transhepatic Rendezvous Technique for Stenting of Malignant Biliary Obstruction in 2 Cats</a></li>
-<li><a href="https://onlinelibrary.wiley.com/doi/10.1111/jvim.70183?af=R" target="_blank" rel="noopener noreferrer">Continuous Renal Replacement Therapy: Application of Kidney Disease Improving Global Outcomes Guidelines for Treatment Prescription in Dogs With Acute Kidney Injury and Outcome Prediction</a></li>
-<li><a href="https://onlinelibrary.wiley.com/doi/10.1111/jvim.70181?af=R" target="_blank" rel="noopener noreferrer">Myocardial and Renal Renin–Angiotensin System Enzyme Activity in Dogs</a></li>
-<li><a href="https://onlinelibrary.wiley.com/doi/10.1111/jvim.70145?af=R" target="_blank" rel="noopener noreferrer">Evaluation of Subjective Assessment of Right Heart Size and Function Using Standard 2D‐Echocardiographic Recordings in Horses With and Without Pulmonary Hypertension</a></li>
 </ul>
 <h2>Journals of Small Animal Practice</h2>
 <ul>
+<li><a href="https://onlinelibrary.wiley.com/doi/10.1111/jsap.13914?af=R" target="_blank" rel="noopener noreferrer">Outcome of lip‐to‐lid subdermal plexus flaps to reconstruct defects of the lower eyelid in dogs and cats: 46 cases (2005‐2022)</a></li>
+<li><a href="https://onlinelibrary.wiley.com/doi/10.1111/jsap.13909?af=R" target="_blank" rel="noopener noreferrer">Elbow arthrodesis in five Spaniel breed dogs as a salvage procedure for chronic humeral condylar fractures</a></li>
 <li><a href="https://onlinelibrary.wiley.com/doi/10.1111/jsap.13848?af=R" target="_blank" rel="noopener noreferrer">Multiple pathological bone fractures in a dog with adrenal‐dependent Cushing's syndrome</a></li>
 <li><a href="https://onlinelibrary.wiley.com/doi/10.1111/jsap.13845?af=R" target="_blank" rel="noopener noreferrer">Right duplex kidney associated with ectopic ureter in an incontinent cat</a></li>
 <li><a href="https://onlinelibrary.wiley.com/doi/10.1111/jsap.13748?af=R" target="_blank" rel="noopener noreferrer">Issue Information</a></li>
-<li><a href="https://onlinelibrary.wiley.com/doi/10.1111/jsap.13846?af=R" target="_blank" rel="noopener noreferrer">Peripheral nerve blocks of the dorsal cranium in cats undergoing craniotomy: seven cases (2022‐2023)</a></li>
-<li><a href="https://onlinelibrary.wiley.com/doi/10.1111/jsap.13847?af=R" target="_blank" rel="noopener noreferrer">High concordance of blood glucose measurement in dogs between a beta prototype glucometer device and a reference laboratory standard in a clinical setting</a></li>
 </ul>
 <h2>Journal of Feline Medicine and Surgery (JFMS)</h2>
 <ul>
@@ -63,7 +63,7 @@
 <li><a href="http://www.jstage.jst.go.jp/browse/jvms/" target="_blank" rel="noopener noreferrer">The new article is now available. Journal of Veterinary Medical Science</a></li>
 <li><a href="http://www.jstage.jst.go.jp/browse/jvms/" target="_blank" rel="noopener noreferrer">The new article is now available. Journal of Veterinary Medical Science</a></li>
 </ul>
-<p class="update-time">最終更新: 2025-07-08 14:44:41 JST</p>
+<p class="update-time">最終更新: 2025-07-09 14:49:00 JST</p>
         </div>
     </body>
     </html>
