deploy: c69c135c766de5b9f0aa6c186d3e9e98e7969bb4

--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
 </ul>
 <h2>Journals of Small Animal Practice</h2>
 <ul>
+<li><a href="https://onlinelibrary.wiley.com/doi/10.1111/jsap.13904?af=R" target="_blank" rel="noopener noreferrer">Long‐term outcome of ultrasound‐guided retrieval of subcutaneous foreign bodies in 32 dogs (2015–2022)</a></li>
+<li><a href="https://onlinelibrary.wiley.com/doi/10.1111/jsap.13894?af=R" target="_blank" rel="noopener noreferrer">When – and whether – should we spay/neuter companion dogs</a></li>
 <li><a href="https://onlinelibrary.wiley.com/doi/10.1111/jsap.13914?af=R" target="_blank" rel="noopener noreferrer">Outcome of lip‐to‐lid subdermal plexus flaps to reconstruct defects of the lower eyelid in dogs and cats: 46 cases (2005‐2022)</a></li>
 <li><a href="https://onlinelibrary.wiley.com/doi/10.1111/jsap.13909?af=R" target="_blank" rel="noopener noreferrer">Elbow arthrodesis in five Spaniel breed dogs as a salvage procedure for chronic humeral condylar fractures</a></li>
 <li><a href="https://onlinelibrary.wiley.com/doi/10.1111/jsap.13848?af=R" target="_blank" rel="noopener noreferrer">Multiple pathological bone fractures in a dog with adrenal‐dependent Cushing's syndrome</a></li>
-<li><a href="https://onlinelibrary.wiley.com/doi/10.1111/jsap.13845?af=R" target="_blank" rel="noopener noreferrer">Right duplex kidney associated with ectopic ureter in an incontinent cat</a></li>
-<li><a href="https://onlinelibrary.wiley.com/doi/10.1111/jsap.13748?af=R" target="_blank" rel="noopener noreferrer">Issue Information</a></li>
 </ul>
 <h2>Journal of Feline Medicine and Surgery (JFMS)</h2>
 <ul>
@@ -63,7 +63,7 @@
 <li><a href="http://www.jstage.jst.go.jp/browse/jvms/" target="_blank" rel="noopener noreferrer">The new article is now available. Journal of Veterinary Medical Science</a></li>
 <li><a href="http://www.jstage.jst.go.jp/browse/jvms/" target="_blank" rel="noopener noreferrer">The new article is now available. Journal of Veterinary Medical Science</a></li>
 </ul>
-<p class="update-time">最終更新: 2025-07-09 14:49:00 JST</p>
+<p class="update-time">最終更新: 2025-07-10 14:47:41 JST</p>
         </div>
     </body>
     </html>
