deploy: c69c135c766de5b9f0aa6c186d3e9e98e7969bb4

--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
 </ul>
 <h2>Journal of Veterinary Internal Medicine (JVIM)</h2>
 <ul>
+<li><a href="https://onlinelibrary.wiley.com/doi/10.1111/jvim.70173?af=R" target="_blank" rel="noopener noreferrer">An e‐Reporting Tool for Facilitating Submission of Veterinary Adverse Drug Reaction Reports</a></li>
 <li><a href="https://onlinelibrary.wiley.com/doi/10.1111/jvim.70170?af=R" target="_blank" rel="noopener noreferrer">Metabolic Alterations Associated With Rapidly Progressive Chronic Kidney Disease in Cats</a></li>
 <li><a href="https://onlinelibrary.wiley.com/doi/10.1111/jvim.70166?af=R" target="_blank" rel="noopener noreferrer">Exploring the Importance of Repeated Health Screening in Healthy Older Dogs</a></li>
 <li><a href="https://onlinelibrary.wiley.com/doi/10.1111/jvim.70179?af=R" target="_blank" rel="noopener noreferrer">Safety, Efficacy and Doxorubicin Pharmacokinetics During Cannabidiol/Cannabidiolic Acid Rich Hemp Oil Use in Dogs With Lymphoma Undergoing CHOP Chemotherapy</a></li>
 <li><a href="https://onlinelibrary.wiley.com/doi/10.1111/jvim.70185?af=R" target="_blank" rel="noopener noreferrer">A CNTNAP1 Missense Variant Associated With Laryngeal Paralysis and Polyneuropathy in Young Great Dane Dogs</a></li>
-<li><a href="https://onlinelibrary.wiley.com/doi/10.1111/jvim.70178?af=R" target="_blank" rel="noopener noreferrer">Use of a Modified Transhepatic Rendezvous Technique for Stenting of Malignant Biliary Obstruction in 2 Cats</a></li>
 </ul>
 <h2>Journals of Small Animal Practice</h2>
 <ul>
@@ -63,7 +63,7 @@
 <li><a href="http://www.jstage.jst.go.jp/browse/jvms/" target="_blank" rel="noopener noreferrer">The new article is now available. Journal of Veterinary Medical Science</a></li>
 <li><a href="http://www.jstage.jst.go.jp/browse/jvms/" target="_blank" rel="noopener noreferrer">The new article is now available. Journal of Veterinary Medical Science</a></li>
 </ul>
-<p class="update-time">最終更新: 2025-07-13 14:43:31 JST</p>
+<p class="update-time">最終更新: 2025-07-14 14:50:42 JST</p>
         </div>
     </body>
     </html>
