deploy: c69c135c766de5b9f0aa6c186d3e9e98e7969bb4

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
 <h2>Journal of Feline Medicine and Surgery (JFMS)</h2>
 <ul>
 <li><a href="https://journals.sagepub.com/doi/abs/10.1177/1098612X251336702?af=R" target="_blank" rel="noopener noreferrer">Percutaneous cholecystostomy drain placement in cats: feasibility and safety of an ultrasound- and fluoroscopy-guided method</a></li>
+<li><a href="https://journals.sagepub.com/doi/abs/10.1177/1098612X251341539?af=R" target="_blank" rel="noopener noreferrer">Prevalence of hypocobalaminaemia and hypercobalaminaemia in a referral population of cats in the UK and its relevance to clinical presentation, diagnosis and prognosis</a></li>
 <li><a href="https://journals.sagepub.com/doi/abs/10.1177/1098612X251314710?af=R" target="_blank" rel="noopener noreferrer">Exposure of urine of domestic cats to different substrates: impact on urine specific gravity</a></li>
 <li><a href="https://journals.sagepub.com/doi/abs/10.1177/1098612X251334558?af=R" target="_blank" rel="noopener noreferrer">Physical rehabilitation of cats: 1. Common conditions benefiting from physiotherapy</a></li>
 <li><a href="https://journals.sagepub.com/doi/abs/10.1177/1098612X251334555?af=R" target="_blank" rel="noopener noreferrer">Physical rehabilitation of cats: 2. Treatment therapies and exercises</a></li>
@@ -63,7 +64,7 @@
 <li><a href="http://www.jstage.jst.go.jp/browse/jvms/" target="_blank" rel="noopener noreferrer">The new article is now available. Journal of Veterinary Medical Science</a></li>
 <li><a href="http://www.jstage.jst.go.jp/browse/jvms/" target="_blank" rel="noopener noreferrer">The new article is now available. Journal of Veterinary Medical Science</a></li>
 </ul>
-<p class="update-time">最終更新: 2025-07-14 14:50:42 JST</p>
+<p class="update-time">最終更新: 2025-07-15 14:52:26 JST</p>
         </div>
     </body>
     </html>
